covert home to stateless - request subjects once ! - request gapi once(issue at refresh)

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ overflow-x: hidden;
 }
 
 .container{
-  margin: 80px auto 0 auto;
+  margin: 20px auto 0 auto;
 }
 
 .nav-container{
